<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SearchActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_120sdp"
        android:background="@color/white"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_search"
            android:layout_marginStart="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_32sdp" />


        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/text_box"
            android:hint="@string/movie_name"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/button_box"
            android:text="@string/next"
            android:textColor="@color/white"
            app:srcCompat="@android:drawable/ic_menu_search"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</LinearLayout>