<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/child"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_92sdp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/connection_problem"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/imageView_movie_poster"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_toEndOf="@+id/imageView_movie_poster">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/releaseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_title"
                android:text="@string/movie_release_year"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_title"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_toEndOf="@+id/releaseText"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


        </RelativeLayout>


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/movie_title"
        android:layout_marginTop="10dp"
        android:background="@color/grey_100" />

</LinearLayout>